--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="right">
-            <img src="images/img2.png" alt="#">
+            <img src="images/img2.PNG" alt="#">
         </div>
     </div>
     <div class="header">
@@ -120,7 +120,7 @@
             </div>
         </div>
         <div class="right">
-            <img src="images/img4.png" alt="#">
+            <img src="images/img4.PNG" alt="#">
         </div>
     </div>
     <div class="header">
@@ -149,7 +149,7 @@
             </div>
         </div>
         <div class="right">
-            <img src="images/img5.png" alt="#">
+            <img src="images/img5.PNG" alt="#">
         </div>
     </div>
     <div class="header">
@@ -172,7 +172,7 @@
             </div>
         </div>
         <div class="right">
-            <img src="images/img6.png" alt="#">
+            <img src="images/img6.PNG" alt="#">
         </div>
     </div>
     <div class="line"></div>
@@ -231,7 +231,7 @@
     </div>
     <div class="connect">
         <div class="twitter">
-            <img  src="images/twitter.PNG" alt=""></a>
+            <img  src="images/twitter.PNG" alt="">
             <a class="black" href="https://twitter.com/webstormide">@WebStormIDE</a>
         </div><br>
         <div class="blog">
